--- a/app/views/gardens/_form.html.erb
+++ b/app/views/gardens/_form.html.erb
@@ -1,17 +1,10 @@
-<%= form_for(garden) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :address %>
-  <%= f.text_field :address %>
-  <%= f.label :size %>
-  <%= f.number_field :size %>
-  <%= f.label :capacity %>
-  <%= f.number_field :capacity %>
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-  <%= f.label :price_per_hour %>
-  <%= f.text_field :price_per_hour %>
+<%= simple_form_for(garden) do |f| %>
+  <%= f.input :title %>
+  <%# <%= f.label :address %>
+  <%# <%= f.text_field :address %>
+  <%= f.input :size %>
+  <%= f.input :capacity %>
+  <%= f.input :description %>
+  <%= f.input :price_per_hour %>
   <%= f.submit %>
 <% end %>
-
-:title, :size, :capacity, :description, :price_per_hour
