fixing the routes & deleting useless pages

--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -11,10 +11,4 @@
 <br>
 <%= link_to 'Main menu', root_path %>
 
-<%= link_to "New Garden", new_garden_path if policy(Garden).new? %>
-
-<% if policy(@garden).edit? %>
-  <%= link_to "Edit this Garden", edit_garden_path(@garden) %> |
-<% end %>
-<!-- [...] -->
-<%= button_to "Destroy this garden", @garden, method: :delete if policy(@garden).destroy? %>
+<%= link_to "Book now!",  new_garden_booking_path(@garden), :class => 'btn btn-flat' %>
