--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -19,7 +19,7 @@
   width: calc(25% - 10px);
 }
 
-.card-garden > img {
+.card-garden > a > img {
   height: 200px;
   width: 100%;
   object-fit: cover;
