modif navbar + cloudinary+ footer pb solved

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  position:absolute;
   background: #fafafa;
   display: flex;
   align-items: center;
@@ -26,4 +25,7 @@
 }
 .footer .fa-heart {
   color: #74CB67;
+}
+.fullscreen_footer {
+  min-height: calc(100vh - 169px);
 }
