--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-  position:absolute;
+  position: static;
+  margin-top: 20px;
   background: #fafafa;
   display: flex;
   align-items: center;
