reservation controller ready

--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -21,6 +21,7 @@
         <%= f.input :start_date, as: :date, html5: true%>
         <%= f.input :end_date, as: :date, html5: true %>
         <%= f.submit %>
+        <%#= link_to "Reservez!", garden_booking_path(@garden, @booking), :class => 'btn btn-flat my-4' %>
       <% end %>
     </div>
   </div>
