--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -18,8 +18,12 @@
   <% @gardens.each do |garden| %>
     <div class="card-garden">
       <%= link_to garden_path(garden) do %>
+      <% if garden.photos.empty? %>
         <%= image_tag "garden_one" %>
-      <% end %>
+        <% else %>
+        <%= cl_image_tag garden.photos.first.key, height: 200, width: 200, crop: :fill %>
+        <% end %>
+  <% end %>
       <div class="card-garden-infos">
         <div class="card-garden-left">
           <h2><%= garden.title %></h2>
@@ -32,4 +36,10 @@
       </div>
     </div>
   <% end %>
+  <%# <img id="map" src='pk.eyJ1IjoibGlkd2luZSIsImEiOiJjbDNscG81YmgwdmFwM2VvN3o5ZjFjNnFvIn0.yeFAi79t-KnH-g_FG1T6AA'> %>
+  <div style="width: 100%; height: 600px;"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 </div>
