--- a/app/views/gardens/new.html.erb
+++ b/app/views/gardens/new.html.erb
@@ -1,1 +1,3 @@
-<%= render "form", garden: @garden %>
+<div container class="container fullscreen_footer">
+  <%= render "form", garden: @garden %>
+</div>
