--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
+    <div class="content-wrapper">
     <%= yield %>
     <%= render "shared/footer" %>
+    </div>
   </body>
 </html>
