--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> by @BeMyBest_team !
+    L'équipe BeMyBest vous remercie pour votre visite <i class="fas fa-heart"></i> !
     <br>
     ©Copyrights 2022. All rights reserved.
   </div>
