--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,6 +4,8 @@
   background: white;
   padding: 10px;
   width: calc(25% - 10px);
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
 .card-garden > a > img {
