--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,18 @@
-
-  <div class="home-banner">
-      <h1>Privatisez un jardin ou une piscine !</h1>
-      <h4>Envie d'un écrin de verdure pour un anniversaire ou une réunion de famille ou simplement un apéro piscine ? </h4>
-      <h4>Trouver VOTRE jardin idéal</h4>
-    <div class="d-flex justify-content-center">
-      <%= form_tag gardens_path, method: :get, class: "d-flex align-center w-50" do %>
-      <%= text_field_tag :query,
-      params[:query],
-      class: "form-control",
-      placeholder: "Recherche ton jardin idéal"
-      %>
-      <%= submit_tag "Search", class: "btn btn-primary" %>
-      <% end %>
-    </div>
+<div class="home-banner">
+    <h1>Privatisez un jardin ou une piscine !</h1>
+    <h4>Envie d'un écrin de verdure pour un anniversaire ou une réunion de famille ou simplement un apéro piscine ? </h4>
+    <h4>Trouver VOTRE jardin idéal</h4>
+  <div class="d-flex justify-content-center">
+    <%= form_tag gardens_path, method: :get, class: "d-flex align-center w-50" do %>
+    <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "Recherche ton jardin idéal"
+    %>
+    <%= submit_tag "Search", class: "btn btn-primary" %>
+    <% end %>
   </div>
+</div>
 
 <div class="container d-flex flex-wrap justify-content-between">
   <% @gardens.last(12).each do |garden| %>
@@ -31,8 +30,9 @@
           <p>Ville</p>
         </div>
         <div class="card-garden-right">
-          <h6>Capacity : <%= garden.capacity %></h6>
-          <h2 class="card-garden-pricing"><%= garden.price_per_hour %>€ /hour</h2>
+
+          <h6>Capacité : <%= garden.capacity %></h6>
+          <h2 class="card-garden-pricing"><%= garden.price_per_hour %>€ /heure</h2>
         </div>
       </div>
     </div>
