--- a/app/views/gardens/_form.html.erb
+++ b/app/views/gardens/_form.html.erb
@@ -1,11 +1,11 @@
 <%= simple_form_for(garden) do |f| %>
   <%= f.input :title %>
-  <%# <%= f.label :address %>
-  <%# <%= f.text_field :address %>
   <%= f.input :size %>
   <%= f.input :capacity %>
   <%= f.input :description %>
   <%= f.input :price_per_hour %>
+  <%= f.input :address %>
+  <%= f.input :town %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.submit %>
 <% end %>
