--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,4 @@
-<h1> felication votre reservation a bien été prise en compte</h1>
+<h1> Félicitations votre réservation a bien été prise en compte !</h1>
 
 <%= @booking.garden.title %>
 <p> Du <%= @booking.start_date %> au <%= @booking.end_date %> </p>
