--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -5,21 +5,25 @@
 
 <div class="container d-flex flex-wrap">
   <% @gardens.each do |garden| %>
-    <div class="card-garden mt-1 me-3">
-      <%= image_tag "garden_one" %>
-      <div class="card-garden-infos">
+    <div class="card-garden mt-1 me-3 card-dashboard-center">
+      <% if garden.photos.empty? %>
+        <%= image_tag "garden_one" %>
+        <% else %>
+        <%= cl_image_tag garden.photos.first.key%>
+        <% end %>
+      <div class="card-garden-infos card-garden-infos-dashboard">
         <div class="card-garden-left">
           <h2><%= garden.title %></h2>
           <p>Ville</p>
+        </div>
+        <div class="card-garden-right">
+          <h6>Capacity : <%= garden.capacity %></h6>
+          <h2 class="card-garden-pricing"><%= garden.price_per_hour %>€ /hour</h2>
           <%= link_to "Edit list",  edit_garden_path(garden), :class => 'btn btn-flat my-4' %>
           <%= link_to "Delete",
         garden_path(garden), :class => 'btn btn-flat',
         data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
         %>
-        </div>
-        <div class="card-garden-right">
-          <h6>Capacity : <%= garden.capacity %></h6>
-          <h2 class="card-garden-pricing"><%= garden.price_per_hour %>€ /hour</h2>
         </div>
       </div>
     </div>
@@ -27,3 +31,32 @@
 </div>
 
 <%= link_to "add garden",  new_garden_path, class: "btn btn-flat mx-5 my-3" %>
+
+<h2>Mes réservations</h2>
+
+<div class="container d-flex flex-wrap">
+  <% @bookings.each do |booking| %>
+    <div class="card-garden mt-1 me-3 card-dashboard-center">
+      <% if booking.garden.photos.empty? %>
+        <%= image_tag "garden_one" %>
+        <% else %>
+        <%= cl_image_tag booking.garden.photos.first.key%>
+        <% end %>
+      <div class="card-garden-infos card-garden-infos-dashboard w-100">
+        <div class="card-garden-left">
+          <h2><%= booking.garden.title %></h2>
+          <p>Ville</p>
+        </div>
+        <div class="card-garden-right">
+          <h6>Capacity : <%= booking.garden.capacity %></h6>
+          <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /hour</h2>
+
+          <%#= link_to "Cancel your reservation",
+        booking_path(booking), :class => 'btn btn-flat',
+        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+        %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
