--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -1,6 +1,7 @@
 <div class="container fullscreen_footer">
   <h1> Mon dashboard</h1>
   <h2> Mes jardins</h2>
+
   <div class="container d-flex flex-wrap">
   <% @gardens.each do |garden| %>
     <div class="card-garden mt-1 me-3 card-dashboard-center">
@@ -12,11 +13,11 @@
       <div class="card-garden-infos card-garden-infos-dashboard">
         <div class="card-garden-left">
           <h2><%= garden.title %></h2>
-          <p>garden.town</p>
+          <p><%=garden.town%></p>
         </div>
         <div class="card-garden-right">
-          <h6>Capacity : <%= garden.capacity %></h6>
-          <h2 class="card-garden-pricing"><%= garden.price_per_hour %>€ /hour</h2>
+          <h6>Capacité : <%= garden.capacity %></h6>
+          <h2 class="card-garden-pricing"><%= garden.price_per_hour %>€ /heure</h2>
           <%= link_to "Edit list",  edit_garden_path(garden), :class => 'btn btn-flat my-4' %>
           <%= link_to "Delete",
         garden_path(garden), :class => 'btn btn-flat',
@@ -25,35 +26,34 @@
         </div>
       </div>
     <% end %>
-  </div>
+  <%= link_to "add garden",  new_garden_path, class: "btn btn-flat mx-5 my-3" %>
 
-<%= link_to "add garden",  new_garden_path, class: "btn btn-flat mx-5 my-3" %>
+  <h2>Mes réservations</h2>
 
-<h2>Mes réservations</h2>
+  <div class="container d-flex">
+    <% @bookings.each do |booking| %>
+      <div class="card-garden mt-1 me-3 card-dashboard-center">
+        <% if booking.garden.photos.empty? %>
+          <%= image_tag "garden_one" %>
+          <% else %>
+          <%= cl_image_tag booking.garden.photos.first.key%>
+          <% end %>
+        <div class="card-garden-infos card-garden-infos-dashboard w-100">
+          <div class="card-garden-left">
+            <h2><%= booking.garden.title %></h2>
+            <p>Ville</p>
+          </div>
+          <div class="card-garden-right">
+            <h6>Capacity : <%= booking.garden.capacity %></h6>
+            <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /hour</h2>
 
-<div class="container d-flex flex-wrap">
-  <% @bookings.each do |booking| %>
-    <div class="card-garden mt-1 me-3 card-dashboard-center">
-      <% if booking.garden.photos.empty? %>
-        <%= image_tag "garden_one" %>
-        <% else %>
-        <%= cl_image_tag booking.garden.photos.first.key%>
-        <% end %>
-      <div class="card-garden-infos card-garden-infos-dashboard w-100">
-        <div class="card-garden-left">
-          <h2><%= booking.garden.title %></h2>
-          <p>Ville</p>
-        </div>
-        <div class="card-garden-right">
-          <h6>Capacity : <%= booking.garden.capacity %></h6>
-          <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /hour</h2>
-
-          <%#= link_to "Cancel your reservation",
-        booking_path(booking), :class => 'btn btn-flat',
-        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-        %>
+            <%#= link_to "Cancel your reservation",
+          booking_path(booking), :class => 'btn btn-flat',
+          data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+          %>
+          </div>
         </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
