--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -9,7 +9,7 @@
       <p> Surface : <%= @garden.size %> m2</p>
       <p> Capacité d'accueil : <%= @garden.capacity %> personnes</p>
       <p>Description : <%= @garden.description %></p>
-      <p> Prix : <%= @garden.price_per_hour %> $/par heure</p>
+      <p> Prix : <%= @garden.price_per_hour %> €/par heure</p>
       <br>
       <h3>Avis d'anciens locataires</h3>
       <%# <p><%= @user.review %></p>
