--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -12,7 +12,7 @@
         <div class="card-garden-infos card-garden-infos-dashboard">
           <div class="card-garden-left">
             <h2><%= garden.title %></h2>
-            <p>garden.town</p>
+            <p><%= garden.town%></p>
           </div>
           <div class="card-garden-right">
             <h6>Capacity : <%= garden.capacity %></h6>
@@ -42,7 +42,7 @@
         <div class="card-garden-infos card-garden-infos-dashboard w-100">
           <div class="card-garden-left">
             <h2><%= booking.garden.title %></h2>
-            <p>Ville</p>
+            <p><%= booking.garden.town%></p>
           </div>
           <div class="card-garden-right">
             <h6>Capacity : <%= booking.garden.capacity %></h6>
