--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -12,7 +12,7 @@
 }
 
 .index-banner {
-background-color: rgb(29, 117, 25);
+background-color: #1D6E46;
 color: white;
 height: 200px;
 display: flex;
