--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -29,7 +29,7 @@
           <div class="card-garden-infos">
             <div class="card-garden-left">
               <h2><%= garden.title %></h2>
-              <p>Ville</p>
+              <p><%= garden.town %></p>
             </div>
             <div class="card-garden-right">
               <h6>Capacité : <%= garden.capacity %></h6>
