--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -50,6 +50,12 @@
           </div>
         </div>
       </div>
-    <% end %>
   </div>
+      <h1>New review</h1>
+      <%= simple_form_for [booking.garden, @review] do |f| %>
+        <%= f.input :content %>
+        <%= f.input :rating %>
+        <%= f.submit "Submit review", class: "btn btn-primary" %>
+      <% end %>
+    <% end %>
 </div>
