--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <%= text_field_tag :query,
     params[:query],
     class: "form-control",
-    placeholder: "Recherche ton jardin idéal"
+    placeholder: "Recherche ton jardin idéal par mot clé ou ville"
     %>
     <%= submit_tag "Search", class: "btn btn-primary" %>
     <% end %>
