--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -20,7 +20,7 @@
             <%= link_to "Edit list",  edit_garden_path(garden), :class => 'btn btn-flat my-4' %>
             <%= link_to "Delete",
           garden_path(garden), :class => 'btn btn-flat',
-          data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+          data: {turbo_method: :delete, turbo_confirm: "Confirmez-vous la suppression demandée ?"}
           %>
           </div>
         </div>
