--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h2>Resend confirmation instructions</h2>
+  <h2>Renvoyer les instructions de confirmation</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
     <%= f.error_notification %>
@@ -15,7 +15,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Resend confirmation instructions" %>
+      <%= f.button :submit, "Renvoyer les instructions de confirmation" %>
     </div>
   <% end %>
 
