--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Change your password</h2>
+  <h2>Changez votre mot de passe</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Change my password" %>
+      <%= f.button :submit, "Changer mon mot de passe" %>
     </div>
   <% end %>
 
