--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
 
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <h2>Modifier mon profil</h2>
+  <%# <%= resource_name.to_s.humanize %>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
@@ -13,35 +14,39 @@
       <% end %>
 
   <%= f.input :last_name,
+                label: 'Nom',
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "last_name" }%>
     <%= f.input :first_name,
+                  label: 'Prénom',
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "first_name" }%>
       <%= f.input :password,
-                  hint: "leave it blank if you don't want to change it",
+                  label: 'Mot de passe',
+                  hint: "laissez-le vide si vous ne voulez pas le modifier.",
                   required: false,
                   input_html: { autocomplete: "new-password" } %>
       <%= f.input :password_confirmation,
+                  label: 'Confirmation du mot de passe',
                   required: false,
                   input_html: { autocomplete: "new-password" } %>
       <%= f.input :current_password,
-                  hint: "we need your current password to confirm your changes",
+                  label: 'Mot de passe actuel',
+                  hint: "nous avons besoin de votre mot de passe actuel pour confirmer vos changements",
                   required: true,
                   input_html: { autocomplete: "current-password" } %>
       <%= f.input :photo, as: :file %>
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Update" %>
+      <%= f.button :submit, "Mettre à jour" %>
     </div>
   <% end %>
 
-  <h3>Cancel my account</h3>
 
-  <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+  <p class="mt-5">Malheureux ? <%= link_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Confirmez-vous la suppression ?" }, method: :delete %></p>
 
-  <%= link_to "Back", :back %>
+  <%= link_to "Retour", :back %>
 </div>
