--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,17 @@
 <div class="container">
-  <h2>Sign up</h2>
+  <h2>Formulaire d'inscription</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
     <%= f.error_notification %>
 
     <div class="form-inputs">
     <%= f.input :last_name,
+                  label: 'Nom',
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "last_name" }%>
     <%= f.input :first_name,
+                  label: 'Prénom',
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "first_name" }%>
@@ -18,17 +20,19 @@
                   autofocus: true,
                   input_html: { autocomplete: "email" }%>
       <%= f.input :password,
+                  label: 'Mot de passe',
                   required: true,
                   hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                   input_html: { autocomplete: "new-password" } %>
       <%= f.input :password_confirmation,
+                  label: 'Confirmation du mot de passe',
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
       <%= f.input :photo, as: :file %>
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
+      <%= f.button :submit, "Inscription" %>
     </div>
   <% end %>
 
