--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "pages/home";
 @import "components/footer";
 @import "components/button_green";
+@import "pages/dashboard";
 
 // police
 
