--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -30,16 +30,15 @@
 
   <%= link_to "add garden",  new_garden_path, class: "btn btn-flat mx-5 my-3" %>
 
-  <h2>Mes réservations</h2>
-
+  <h1> Mes reservations à venir </h1>
   <div class="container d-flex flex-wrap">
-    <% @bookings.each do |booking| %>
+  <% @next_bookings.each do |booking| %>
       <div class="card-garden mt-1 me-3 card-dashboard-center">
         <% if booking.garden.photos.empty? %>
           <%= image_tag "garden_one" %>
-        <% else %>
+          <% else %>
           <%= cl_image_tag booking.garden.photos.first.key%>
-        <% end %>
+          <% end %>
         <div class="card-garden-infos card-garden-infos-dashboard w-100">
           <div class="card-garden-left">
             <h2><%= booking.garden.title %></h2>
@@ -48,14 +47,42 @@
           <div class="card-garden-right">
             <h6>Capacity : <%= booking.garden.capacity %></h6>
             <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /hour</h2>
+              <%= simple_form_for [booking.garden, @review] do |f| %>
+                <%= f.input :content, label: "Commentaire :"%>
+                <%= f.input :rating, label: "Note :" %>
+                <%= f.submit "Notez votre hôte", class: "btn btn-flat" %>
+              <% end %>
           </div>
         </div>
       </div>
-      <%= simple_form_for [booking.garden, @review] do |f| %>
-        <%= f.input :content %>
-        <%= f.input :rating %>
-        <%= f.submit "Submit review", class: "btn btn-primary" %>
-      <% end %>
     <% end %>
   </div>
+
+  <h1> Mes reservations passées</h1>
+  <div class="container d-flex flex-wrap">
+  <% @past_bookings.each do |booking| %>
+      <div class="card-garden mt-1 me-3 card-dashboard-center">
+        <% if booking.garden.photos.empty? %>
+          <%= image_tag "garden_one" %>
+          <% else %>
+          <%= cl_image_tag booking.garden.photos.first.key%>
+          <% end %>
+        <div class="card-garden-infos card-garden-infos-dashboard w-100">
+          <div class="card-garden-left">
+            <h2><%= booking.garden.title %></h2>
+            <p><%= booking.garden.town%></p>
+          </div>
+          <div class="card-garden-right">
+            <h6>Capacity : <%= booking.garden.capacity %></h6>
+            <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /hour</h2>
+              <%= simple_form_for [booking.garden, @review] do |f| %>
+                <%= f.input :content, label: "Commentaire :"%>
+                <%= f.input :rating, label: "Note :" %>
+                <%= f.submit "Notez votre hôte", class: "btn btn-flat" %>
+              <% end %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+    </div>
 </div>
