--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,10 +1,11 @@
 
 <div class="container fullscreen_footer">
-  <h1> Félicitations <%=  @booking.user.first_name %>, votre reservation a bien été prise en compte</h1>
+  <h1> Félicitations <%=  @booking.user.first_name %>, votre réservation a bien été prise en compte.</h1>
   <% @booking.garden.photos.each do |photo| %>
     <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
   <% end %> <br>
-  <%= @booking.garden.title %>
+  <h2><%= @booking.garden.title %></h2>
 
   <p> Du <%= @booking.start_date %> au <%= @booking.end_date %> </p>
+  <p>Total : <%= @booking.total_price %> €</p>
 </div>
