--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -19,7 +19,7 @@
       <%= simple_form_for [@garden, @booking] do |f| %>
         <%= f.input :start_date, as: :datetime, html5: true, input_html: {data: {total_price_target: "startdate"}}, :label => "Début"%>
         <%= f.input :end_date, as: :datetime, html5: true, input_html: {data: {total_price_target: "enddate"}}, :label => "Fin"%>
-        <p data-total-price-target = "Prix total"></p>
+        <p data-total-price-target = "total">Total : - €</p>
         <%= f.submit 'Réserver', class: " btn btn-flat" %>
       <% end %>
     </div>
