--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "components/footer";
 @import "components/button_green";
 @import "pages/dashboard";
+@import "components/roomnav";
 
 // police
 
