--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -56,6 +56,7 @@
                 garden_booking_path(booking.garden, booking), :class => 'btn btn-flat',
                 data: {turbo_method: :delete, turbo_confirm: "êtes vous sûr de vouloir annuler cette réservation?"}
                 %>
+            <br> <p> <%= link_to "contacter le propriétaire", garden_booking_room_path(booking.id, booking.room.id, booking.room.id), class: "btn btn-flat" %> </p>
         </div>
       </div>
     <% end %>
