--- a/app/assets/stylesheets/components/_button_green.scss
+++ b/app/assets/stylesheets/components/_button_green.scss
@@ -11,3 +11,16 @@
   background: #1BCB7F;
   color: white;
 }
+
+
+.btn-flat-connexion {
+  text-decoration:none;
+  color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  background: #1EDD88;
+  transition: opacity 0.3s ease;
+  width: 13%;
+  margin-bottom: 20px;
+  margin-top: 30px;
+}
