--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@
       <%= f.input :photo, as: :file %>
     </div>
 
-    <div class="form-actions">
+    <div class="form-actions btn-flat-connexion">
       <%= f.button :submit, "Inscription" %>
     </div>
   <% end %>
