--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,7 +40,7 @@
       <%= f.input :photo, as: :file %>
     </div>
 
-    <div class="form-actions">
+    <div class="form-actions btn-flat-connexion">
       <%= f.button :submit, "Mettre à jour" %>
     </div>
   <% end %>
