--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-12 col-md-3">
-    <%= render partial: 'rooms' %>
+   <h1> Vos conversations </h1>
   </div>
 
   <div class="col">
