--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,33 +1,81 @@
+//smalest devices
+@media (min-width: 100px) and (max-width: 575px) {
+
+  .cards  {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+
+  .cards  {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 16px;
+  }
+
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+
+  .cards  {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 16px;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+
+  .cards{
+    display: grid;
+    grid-template-columns:  1fr 1fr 1fr 1fr;
+    grid-gap: 16px;
+  }
+}
+
 .card-garden {
+
+  height: 235px;
+  width: 200px;
   margin-top: 40px;
   overflow: hidden;
   background: white;
-  width: calc(25% - 10px);
-  border-radius: 7px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px #00000033;
   padding-bottom: 10px;
 }
 
 
-.card-garden > a > img {
-  height: 200px;
-  width: 100%;
+.garden-container {
+  margin: auto;
+  width: fit-content;
+  align-content: center;
+  justify-content: center;
+}
+
+
+.img-garden {
+  height: 150px;
+  width: 215px;
   object-fit: cover;
+
 }
 
-.card-garden h2 {
-  font-size: 16px;
-  font-weight: bold;
+
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
-.card-garden h6 {
-  font-size: 14px;
-}
 
-.card-garden p {
-  font-size: 12px;
-  opacity: .7;
-}
+
 
 
 .card-garden-infos {
@@ -35,6 +83,8 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+  text-decoration: none;
+  color: black;
 }
 .card-garden-infos-dashboard {
   display: block;
@@ -45,20 +95,20 @@ text-align: right;
 }
 
 .card-dashboard-center {
-  margin-top: 40px;
+  margin-top: 20px;
   overflow: hidden;
   justify-content: space-between;
   background: white;
-  width: calc(30% - 10px);
-  border-radius: 10px;
+  width: 230px;
+  border-radius: 4px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   padding-bottom: 10px;
   display: flex;
   flex-direction: column;
   margin: 20px;
   img {
-    min-height: 300px;
-    max-height: 300px;
+    min-height: 180px;
+    max-height: 200px;
     object-fit: cover;
   }
 }
