--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -15,10 +15,10 @@
 </div>
 
 
-<div class="d-flex flex-wrap justify-content-between fullscreen_footer">
+<div class="card-garden justify-content-center">
     <div class="gardens">
       <% @gardens.each do |garden| %>
-        <div class="card-garden">
+        <div class="card-garden justify-content-center">
           <%= link_to garden_path(garden) do %>
           <% if garden.photos.empty? %>
             <%= image_tag "garden_one" %>
