--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -19,14 +19,13 @@
             <% end %>
           </div>
           <div class="d-flex justify-content-between mx-1">
-            <p class="card-garden-pricing"><%= garden.price_per_hour %>€ /heure</p>
+            <p> <%= garden.price_per_hour %>€ /heure</p>
             <%= link_to garden_path(garden), data: {turbo_method: :delete, turbo_confirm: "Veux-tu supprimer ce jardin ?"} do %>
               <i class="fa-solid fa-trash card-project-trash mx-2"></i>
             <% end %>
           </div>
         </div>
       <% end %>
-
       <div class="card-dashboard-center card-add-garden">
         <%= link_to "+",  new_garden_path, class: "btn btn-flat btn-add btn-add-in-card" %>
       </div>
