--- a/app/assets/stylesheets/components/_button_green.scss
+++ b/app/assets/stylesheets/components/_button_green.scss
@@ -1,10 +1,11 @@
 .btn-flat {
   text-decoration:none;
   color: white;
-  padding: 8px 24px;
+  padding: 2px;
   border-radius: 4px;
   background: #1EDD88;
   transition: opacity 0.3s ease;
+  font-size: 13px;
 }
 
 .btn-flat:hover {
