--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -43,7 +43,20 @@
   background: white;
   border-radius: 5px;
   box-shadow: 0 0 15px #00000033;
+  position: relative;
 }
+
+.card-resa {
+  height: 330px;
+  width: 200px;
+  margin-top: 10px;
+  overflow: hidden;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 0 0 15px #00000033;
+  position: relative;
+}
+
 
 .garden-container {
   margin: auto;
@@ -64,18 +77,15 @@ a {
   color: black;
 }
 
-
 // card to add garden in dashboard
 
 .card-dashboard-center {
   height: 240px;
   width: 200px;
-  margin-top: 10px;
 }
 
 .card-dashboard-center.card-add-garden {
   border: solid #1bdd87 10px;
-  justify-content: center;
 }
 a.btn.btn-flat.btn-add.btn-add-in-card {
   background: white;
@@ -83,9 +93,7 @@ a.btn.btn-flat.btn-add.btn-add-in-card {
   font-size: 100px;
   width: 100%;
   height: 100%;
-  margin: 0 !important;
   display: flex;
-  padding: 0 !important;
   justify-content: center;
   align-items: center;
 }
