--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="container fullscreen_footer">
-  <h1><strong>Mon Espace</strong></h1>
-  <h2 class="dash_titles"> Mes jardins</h2>
+  <h1>Mon Espace</h1>
+  <h2 class="text-center"> Mes jardins</h2>
 
   <div class="garden-container">
     <div class="cards">
@@ -32,68 +32,53 @@
     </div>
   </div>
 
-  <h2 class="dash_titles mt-4"> Mes réservations à venir </h2>
-  <div class="container d-flex flex-wrap">
-  <% @next_bookings.each do |booking| %>
-      <div class="card-dashboard-center">
-        <% if booking.garden.photos.empty? %>
-          <%= image_tag "garden_one", class:"img-garden" %>
-          <% else %>
-          <%= cl_image_tag booking.garden.photos.first.key, class:"img-garden"%>
-          <% end %>
-        <div class="card-garden-infos card-garden-infos-dashboard w-100">
-          <div class="card-garden-left px-3">
-            <h2><%= booking.garden.title %></h2>
-            <p><%= booking.garden.town%></p>
-          </div>
-          <div class="card-garden-right px-3">
-            <p>Capacité : <%= booking.garden.capacity %></p>
-            <p class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /heure</p>
-            <% if booking.status %>
-              <p>Status : Validée</p>
-            <% else %>
-              <p>Status : En attente</p>
-            <% end %>
-          </div>
-          <p class="mt-5"> <%= link_to "contacter le propriétaire", garden_booking_room_path(booking.id, booking.room.id, booking.room.id),  :class => 'btn btn-flat w-100' %> </p>
-          <div class="d-flex justify-content-center">
-            <%= link_to "Demande d'annulation",
-              garden_booking_path(booking.garden, booking), :class => 'btn btn-flat w-100',
-              data: {turbo_method: :delete, turbo_confirm: "êtes vous sûr de vouloir annuler cette réservation?"}
-              %>
-          </div>
-        </div>
+  <h2 class="mt-4 text-center"> Mes réservations à venir :</h2>
+  <div class="cards my-4">
+    <% @next_bookings.each do |booking| %>
+    <div class="card-resa">
+      <% if booking.garden.photos.empty? %>
+        <%= image_tag "garden_one", class:"img-garden" %>
+      <% else %>
+        <%= cl_image_tag booking.garden.photos.first.key, class:"img-garden"%>
+      <% end %>
+
+        <% if booking.status %>
+        <i class="status-1 fa-solid fa-check "></i>
+      <% else %>
+        <i class="fa-solid fa-clock-rotate-left status-2"></i>
+      <% end %>
+      <div class="text-center mx-2 mt-1">
+      <h3><%= booking.garden.title %></h2>
+      <p>Capacité : <%= booking.garden.capacity %></p>
+      <p>Prix total : <%= booking.total_price %>€ </p>
+        <%= link_to "Envoyer un message", garden_booking_room_path(booking.id, booking.room.id, booking.room.id),  :class => 'btn btn-flat w-75 mb-2' %>
+        <%= link_to "Annuler",
+          garden_booking_path(booking.garden, booking), :class => 'btn btn-flat w-75',
+          data: {turbo_method: :delete, turbo_confirm: "êtes vous sûr de vouloir annuler cette réservation?"}
+        %>
       </div>
+    </div>
     <% end %>
   </div>
 
 
-  <h2 class="dash_titles"> Mes réservations passées</h2>
-
-  <div class="container d-flex flex-wrap">
-  <% @past_bookings.each do |booking| %>
-      <div class="card-dashboard-center">
-        <% if booking.garden.photos.empty? %>
+  <h2 class="mt-4 text-center"> Mes réservations passées : </h2>
+  <div class="cards my-4">
+    <% @past_bookings.each do |booking| %>
+    <div class="card-resa">
+      <% if booking.garden.photos.empty? %>
           <%= image_tag "garden_one", class:"img-garden" %>
-          <% else %>
-          <%= cl_image_tag booking.garden.photos.first.key, class:"img-garden"%>
+      <% else %>
+        <%= cl_image_tag booking.garden.photos.first.key, class:"img-garden"%>
+      <% end %>
+      <div class="text-center mx-2 mt-1">
+        <h2><%= booking.garden.title %></h2>
+          <%= simple_form_for [booking.garden, @review] do |f| %>
+            <%= f.input :content, label: "Commentaire :"%>
+            <%= f.submit "Notez votre hôte", class: "btn btn-flat w-75" %>
           <% end %>
-        <div class="card-garden-infos card-garden-infos-dashboard w-100">
-          <div class="card-garden-left">
-            <h2><%= booking.garden.title %></h2>
-            <p><%= booking.garden.town%></p>
-          </div>
-          <div class="card-garden-right">
-            <p>Capacité : <%= booking.garden.capacity %></p>
-            <p class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /heure</p>
-            <%= simple_form_for [booking.garden, @review] do |f| %>
-              <%= f.input :content, label: "Commentaire :"%>
-              <%= f.input :rating, label: "Note :" %>
-              <%= f.submit "Notez votre hôte", class: "btn btn-flat w-100" %>
-            <% end %>
-          </div>
-        </div>
       </div>
+    </div>
     <% end %>
   </div>
 </div>
