--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     <%= text_field_tag :query,
     params[:query],
     class: "form-control",
-    placeholder: "Ville "
+    placeholder: "Ville"
     %>
     <%= submit_tag "Rechercher", class: "btn btn-dark" %>
     <% end %>
@@ -26,7 +26,7 @@
       <p class="mx-1"><%= garden.town %></p>
       <div class="d-flex justify-content-between mx-1">
         <p>Capacité : <%= garden.capacity %></p>
-        <p class="card-garden-pricing"><%= garden.price_per_hour %>€ /heure</p>
+        <p><%= garden.price_per_hour %>€ /heure</p>
       </div>
       <% end %>
       </div>
