--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -40,8 +40,8 @@
     </div>
   </div>
 
-  <div class="col-md-6">
-    <div style="width: 100%; height: 280px"
+  <div class="col-md-6 ">
+    <div
       id="map"
       data-controller="map"
       data-map-markers-value="<%= @markers.to_json %>"
